# cut2

./: .gitignore  Untitled.ipynb  Untitled1.ipynb  hello.py  pyproject.toml  requirements.txt  setup.sh  structure.txt  train_x768.txt
classifier/: classifier.py
data/: base_dataset.py  image_folder.py  unaligned_dataset.py
faceparse/: example.py
fairface/: predict.py  predict_race.py
models/: base_model.py  cut_model.py  networks.py
models/tests/: test_cut.py
options/: base_options.py  test_options.py  train_options.py
