[project]
name = "contrastive-unpaired-translation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipython>=9.0.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.1",
    "opencv-python>=4.11.0.86",
    "torchvision>=0.21.0",
]
